fix text alignment

--- a/styles.css
+++ b/styles.css
@@ -159,8 +159,9 @@ button {
   height: auto;
   padding: 50px;
   /* display: flex; */
-  justify-content: space-between;
-  align-items: center;
+  text-align: center;
+  /* justify-content: space-between;
+  align-items: center; */
   padding: 20px 30px;
   color: white;
   border-radius: 15px;
